# ds2

./: .gitignore  .travis.yml  AUTHORS  LICENSE-MIT  README.md  index.html  search-index.js  settings.html  source-files.js
controller/: .travis.yml  Cargo.toml
controller/config/: ds2.toml
controller/examples/: README.md
controller/examples/offline/: flink_wordcount_topology.csv
controller/examples/source_rates/: source-rates.csv
controller/examples/topology/: flink_topology.csv
controller/src/: lib.rs
controller/src/dataflow/: parse.rs  topology.rs
controller/src/policy/: mod.rs  scaling.rs
ds2/: Cargo.toml  all.html  index.html  sidebar-items.js
ds2/dataflow/: index.html  sidebar-items.js  type.ChannelId.html  type.Epoch.html  type.Log.html  type.OperatorId.html  type.OperatorInstanceId.html  type.OperatorInstances.html  type.Rate.html  type.Rates.html  type.Timestamp.html  type.WorkerId.html
ds2/dataflow/parse/: fn.create_flink_topology.html  fn.create_heron_topology.html  fn.create_timely_topology.html  fn.read_flink_rates.html  fn.read_heron_rates.html  fn.read_timely_rates.html  fn.set_source_rates.html  fn.update_flink_rates.html  index.html  sidebar-items.js
ds2/dataflow/topology/: index.html  sidebar-items.js  struct.Flow.html  struct.Operator.html  struct.Topology.html
ds2/examples/topology/: heron_topology.csv
ds2/policy/: index.html  sidebar-items.js
ds2/policy/scaling/: fn.as_vec.html  fn.evaluate_scaling_policy.html  index.html  sidebar-items.js  (+1 more)
ds2/src/: lib.rs  main.rs  monitor.rs
ds2/tests/: scaling_policy_test.rs
(+1658 files in other folders)
