[package]
name = "ds2"
version = "0.1.0"
authors = ["ioannisl <ioannis.liagouris@inf.ethz.ch>"]

[dependencies]
config = "0.11.0"
clap = "2.34.0"
regex = "1.7.0"
petgraph = "0.6.2"
notify = "4.0.17"

[lib]
name = "ds2"
path = "src/lib.rs"

[[bin]]
name = "policy"
path = "src/bin/scaling-policy.rs"

[[bin]]
name = "manager"
path = "src/bin/manager.rs"
